--- a/src/app/form1/form1.component.html
+++ b/src/app/form1/form1.component.html
@@ -9,8 +9,8 @@
 				<a  class = "w3-bar-item w3-hover-text-red "routerLink="/**" routerLinkActive="active">Home</a>
 				<a  class = "w3-bar-item w3-hover-text-red" routerLink="/templates" routerLinkActive="active">Templates</a>
 				<div class = "w3-right w3-bar-item w3-padding w3-padding-right">
-						<a  class = "w3-blue w3-round w3-padding" routerLink="/profile" routerLinkActive="active">My Account<i class = "fa fa-edit" style = "margin-left: 16px;"></i></a>
-				<a  class = "w3-blue w3-round w3-padding" style = "display: none;"routerLink="/form1" routerLinkActive="active">Create Resume<i class = "fa fa-edit" style = "margin-left: 16px;"></i></a>
+						<a  class = "w3-blue w3-round w3-padding w3-margin-right" routerLink="/profile" routerLinkActive="active">My Account<i class = "fa fa-edit" style = "margin-left: 16px;"></i></a>
+				<a  class = "w3-blue w3-round w3-padding " style = "display: none;"routerLink="/form1" routerLinkActive="active">Create Resume<i class = "fa fa-edit" style = "margin-left: 16px;"></i></a>
 				<a class = "w3-red w3-round w3-padding" routerLink="/**" routerLinkActive="active">Logout<i class = "fa fa-power-off" style = "margin-left: 16px; margin-right: 16px;"></i></a>
 				</div>
 			</div>
@@ -29,6 +29,7 @@
 		<!-- Header End -->
 		
 		<!-- Content -->
+		
 		<div class="w3-main w3-container" style="margin-left:200px">
 			<div class = "w3-white">
 				<button class="w3-button w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
@@ -82,7 +83,7 @@
 						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
 						
 						<div class = "w3-margin-top">
-								<a href = "#" onclick = "javascript: openProfile(); return false;" class = "w3-btn w3-red w3-round"><i class = "fa fa-arrow-left w3-margin-right"></i>Back</a>
+								<a href = "#" onclick = "javascript: openProfile(); return false;"  class = "w3-btn w3-red w3-round w3-margin-right"><i class = "fa fa-arrow-left w3-margin-right" ></i>Back</a>
 								<a href = "#" onclick = "javascript: openWork(); return false;" class = "w3-btn w3-blue w3-round">Next<i class = "fa fa-arrow-right w3-margin-left"></i></a>
 						</div>
 						
@@ -109,7 +110,7 @@
 						<br/>
 
 						<div class = "w3-margin-top">
-								<a href = "#" onclick = "javascript: openEducation(); return false;" class = "w3-btn w3-red w3-round"><i class = "fa fa-arrow-left w3-margin-right"></i>Back</a>
+								<a href = "#" onclick = "javascript: openEducation(); return false;" class = "w3-btn w3-red w3-round w3-margin-right"><i class = "fa fa-arrow-left w3-margin-right"></i>Back</a>
 								<a href = "#" onclick = "javascript: openSkills(); return false;" class = "w3-btn w3-blue w3-round">Next<i class = "fa fa-arrow-right w3-margin-left"></i></a>
 						</div>
 
@@ -136,7 +137,7 @@
 						<br/>
 
 						<div class = "w3-margin-top">
-								<a href = "#" onclick = "javascript: openWork(); return false;" class = "w3-btn w3-red w3-round"><i class = "fa fa-arrow-left w3-margin-right"></i>Back</a>
+								<a href = "#" onclick = "javascript: openWork(); return false;" class = "w3-btn w3-red w3-round w3-margin-right"><i class = "fa fa-arrow-left w3-margin-right"></i>Back</a>
 								<a href = "#" onclick = "javascript: openAchievements(); return false;" class = "w3-btn w3-blue w3-round">Next<i class = "fa fa-arrow-right w3-margin-left"></i></a>
 						</div>
 
@@ -160,7 +161,7 @@
 					<br/>
 
 					<div class = "w3-margin-top">
-							<a href = "#" onclick = "javascript: openSkills(); return false;" class = "w3-btn w3-red w3-round"><i class = "fa fa-arrow-left w3-margin-right"></i>Back</a>
+							<a href = "#" onclick = "javascript: openSkills(); return false;" class = "w3-btn w3-red w3-round w3-margin-right"><i class = "fa fa-arrow-left w3-margin-right"></i>Back</a>
 							<a href = "#" onclick = "javascript: openProjects(); return false;" class = "w3-btn w3-blue w3-round">Next<i class = "fa fa-arrow-right w3-margin-left"></i></a>
 					</div>
 
@@ -184,14 +185,14 @@
 					<br/>
 
 					<div class = "w3-margin-top">
-						<a href = "#" class = "w3-btn w3-red w3-round">Add another Project<i class = "fa fa-plus w3-margin-left"></i></a>
+						<a href = "#" class = "w3-btn w3-red w3-round w3-margin-right">Add another Project<i class = "fa fa-plus w3-margin-left"></i></a>
 						<a href = "#" class = "w3-btn w3-blue w3-round">Generate Resume</a>
 					</div>
 					</div>
 				</div>
 				<!-- Projects End -->
 			</div>
-			
+		
 
 			
 		</div>
