--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,7 +8,7 @@
           <a  class = "w3-bar-item w3-hover-text-red" routerLink="/**" routerLinkActive="active" >Home</a>
           <a  class = "w3-bar-item w3-hover-text-red" routerLink="/templates" routerLinkActive="active">Templates</a>
           <div class = "w3-right w3-bar-item w3-padding w3-padding-right">
-          <a class = "w3-blue w3-round w3-padding" routerLink="/templates" routerLinkActive="active">Create Resume<i class = "fa fa-edit" style = "margin-left: 16px;"></i></a>
+          <a class = "w3-blue w3-round w3-padding w3-margin-right" routerLink="/templates" routerLinkActive="active">Create Resume<i class = "fa fa-edit" style = "margin-left: 16px;"></i></a>
           <a class = "w3-red w3-round w3-padding" routerLink="/**" routerLinkActive="active">Logout<i class = "fa fa-power-off" style = "margin-left: 16px; margin-right: 16px;"></i></a>
           </div>
         </div>
@@ -94,7 +94,7 @@
           
           <!-- Password -->
           <div class = "w3-container" style = "display: none; height: 500px;" id = "password">
-            <h4 class = "w3-text-red">Password</h4>
+            <h4 class = "w3-text-red">Change Password</h4>
             
             <div class = "w3-container">
               <p>Enter current password:</p>
@@ -108,7 +108,7 @@
               <br/>
               
               <div class = "w3-margin-bottom">
-              <a href = "#" class = "w3-btn w3-red w3-round">Change Password</a>
+              <a href = "#" class = "w3-btn w3-red w3-round w3-margin-right">Change Password</a>
               <a href = "#" class = "w3-btn w3-blue w3-round" onclick = "javascript: clearFields(); return false;">Reset Fields</a>
               </div>
             </div>
