--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -6,9 +6,9 @@
         <div class = "w3-bar w3-padding w3-white w3-card-4" style = "top: 0px;">
           <div style="">
             <a  class = "w3-bar-item w3-hover-text-red "routerLink="/**" routerLinkActive="active">Home</a>
-            <a href = "javascript: return false;" class = "w3-bar-item w3-hover-text-red" routerLink="/templates" routerLinkActive="active">Templates</a>
+            
             <div class = "w3-right w3-bar-item w3-padding w3-padding-right">
-            <a  class = "w3-blue w3-round w3-padding" routerLink="/profile" routerLinkActive="active">My Account<i class = "fa fa-edit" style = "margin-left: 16px;"></i></a>
+            <a  class = "w3-blue w3-round w3-padding"style ="margin-right:16px;" routerLink="/profile" routerLinkActive="active">My Account<i class = "fa fa-edit" style = "margin-left: 16px;"></i></a>
             <a class = "w3-red w3-round w3-padding" routerLink="/**" routerLinkActive="active">Logout<i class = "fa fa-power-off" style = "margin-left: 16px; margin-right: 16px;"></i></a>
             </div>
           </div>
@@ -31,7 +31,7 @@
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
           <img src = "../../assets/images/fresher1.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a  class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  href="../../assets/images/fresher1.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
             <a  class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;" routerLink="/form1" routerLinkActive="active">Use Template</a>
           </div>
         </div>
@@ -45,7 +45,7 @@
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
           <img src = "../../assets/images/Pro_temp1.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a  class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  href="../../assets/images/Pro_temp1.png"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
             <a  class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;" routerLink="/form1" routerLinkActive="active">Use Template</a>
           </div>
         </div>
@@ -60,7 +60,7 @@
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
           <img src = "../../assets/images/intern1.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a  class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  href="../../assets/images/intern1.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
             <a  class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;" routerLink="/form1" routerLinkActive="active">Use Template</a>
           </div>
         </div>
@@ -79,7 +79,7 @@
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
           <img src = "../../assets/images/Pro_temp1.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  href="../../assets/images/Pro_temp1.png"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
           </div>
         </div>
@@ -94,7 +94,7 @@
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
           <img src = "../../assets/images/pro_temp2.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  href="../../assets/images/pro_temp2.png"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
           </div>
         </div>
@@ -109,7 +109,7 @@
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
           <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  href="../../assets/images/resume.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
           </div>
         </div>
@@ -129,7 +129,7 @@
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
           <img src =  "../../assets/images/fresher1.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  href="../../assets/images/fresher1.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
           </div>
         </div>
@@ -144,7 +144,7 @@
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
           <img src = "../../assets/images/fresher 2.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  href="../../assets/images/fresher 2.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
           </div>
         </div>
@@ -159,7 +159,7 @@
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
           <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  href="../../assets/images/resume.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
           </div>
         </div>
@@ -179,7 +179,7 @@
           <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
             <img src = "../../assets/images/intern1.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
-              <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+              <a  href="../../assets/images/intern1.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
               <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
             </div>
           </div>
@@ -194,7 +194,7 @@
           <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
             <img src = "../../assets/images/intern2.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
-              <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+              <a  href="../../assets/images/intern2.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
               <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
             </div>
           </div>
@@ -209,7 +209,7 @@
           <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
             <img src = "../../assets/images/intern3.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
-              <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+              <a  href="../../assets/images/intern3.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
               <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
             </div>
           </div>
