--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,9 +52,9 @@
               <a class = "w3-right w3-small w3-margin-top w3-hover-text-red" href = "#" onclick = "javascript: openForgotPassword(); return false;">Forgot password?</a>
               <p>Or <a href = "#" onclick = "javascript: openSignUp(); return false;" class = "w3-text-blue">Sign Up</a> using </p>
             
-              <div class = "w3-center w3-margin-bottom">
-                <span class = "w3-padding w3-round w3-btn w3-border w3-red" style = "width: 45%;"><i class = "fa fa-google w3-medium w3-margin-right"></i><a>Google</a></span>
-                <span class = "w3-padding w3-round w3-btn w3-border w3-indigo" style = "width: 45%;"><i class = "fa fa-facebook w3-medium w3-margin-right"></i><a>Facebook</a></span>
+              <div class = "w3-center w3-margin-bottom w3-margin-top">
+                <span class = "w3-padding w3-round w3-btn w3-border w3-red" style = "width: 45%; margin-right:16px"><i class = "fa fa-google w3-medium w3-margin-right"></i><a>Google</a></span>
+                <span class = "w3-padding w3-round w3-btn w3-border w3-indigo" style = "width: 45%;"><i class = "fa fa-facebook w3-medium w3-margin-right "></i><a>Facebook</a></span>
               </div>
             </div>
           </form>
@@ -74,7 +74,7 @@
               <button class = "w3-btn w3-blue w3-round w3-margin-top" style = "width: 100%;" type = "submit"><a>Sign Up</a></button>
             
               <div class = "w3-center w3-margin-bottom w3-margin-top">
-                <span class = "w3-padding w3-round w3-btn w3-border w3-red" style = "width: 45%;"><i class = "fa fa-google w3-medium w3-margin-right"></i><a>Google</a></span>
+                <span class = "w3-padding w3-round w3-btn w3-border w3-red" style = "width: 45%; margin-right:16px"><i class = "fa fa-google w3-medium w3-margin-right"></i><a>Google</a></span>
                 <span class = "w3-padding w3-round w3-btn w3-border w3-indigo" style = "width: 45%;"><i class = "fa fa-facebook w3-medium w3-margin-right"></i><a>Facebook</a></span>
               </div>
               <a href = "#" class = "w3-hover-text-blue w3-round" style = "width: 100%;" onclick="javascript: openLogin(); return false;">Go back to login page</a>
