--- a/src/app/form1/form1.component.html
+++ b/src/app/form1/form1.component.html
@@ -4,7 +4,7 @@
 		
 		<!-- Top Nav -->
 		
-		<div class = "w3-bar w3-padding w3-white w3-card-4" style = "top: 0px;">
+		<div class = "w3-bar w3-padding w3-white w3-card-4" style = "top: 0px; position: fixed; ">
 			<div style="">
 				<a  class = "w3-bar-item w3-hover-text-red "routerLink="/**" routerLinkActive="active">Home</a>
 				<a  class = "w3-bar-item w3-hover-text-red" routerLink="/templates" routerLinkActive="active">Templates</a>
@@ -17,7 +17,7 @@
 		</div>
 		
 		<!-- Top Nav End -->
-		<div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style="width:200px; position:fixed;" id="mySidebar">
+		<div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style="top :60px; width:300px; position:fixed;" id="mySidebar">
 			<button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
 			<a href="#" onclick = "javascript: openProfile(); return false;" class="w3-hover-light-grey w3-bar-item w3-button selected" id = "profile-link">Profile</a>
 			<a href="#" onclick = "javascript: openEducation(); return false;"  class="w3-hover-light-grey w3-bar-item w3-button" id = "education-link">Education</a>
@@ -30,29 +30,33 @@
 		
 		<!-- Content -->
 		
-		<div class="w3-main w3-container" style="margin-left:200px">
+		<form action ="#"class="w3-main w3-container" style="margin-left:285px;">
 			<div class = "w3-white">
 				<button class="w3-button w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
 				
 			</div>
 			
-			<div class = "w3-card-4 w3-round" style = "margin-top: 20px;">
+			<div class = "w3-card-4 w3-round" style = "margin-top: 60px;">
 				<!-- Profile -->
-				<div class = "w3-container" style = "min-height: 500px;" id = "profile">
+				<div class = "w3-container" style = "min-height: 600px;" id = "profile">
 					<h4 class = "w3-text-red">Your Personal Info</h4>
 					<div class = "w3-container">
 					
-						<p>Section Heading</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-contaienr w3-light-grey w3-padding reset">
+						
 					
 						<p>Full Name:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+						<input type = "text" placeholder="e.g; FirstName LastName"style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
 					
 						<p>Email:</p>
-						<input type = "email" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+						<input type = "email" placeholder="e.g; example@mail.com" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
 						
-						<p>Location:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+						<p>Contact Number</p>
+						<input type = "text" placeholder="e.g; 98xxxxxxxx"style = "width: 500px; border: 0px solid black;" class = "w3-contaienr w3-light-grey w3-padding reset">
+						
+						<p>Address:</p>
+						<input type = "text" placeholder="e.g; 26,Baker Street,Bhopal,Madhya Pradesh"style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+						<p>Social Profile</p>
+						<input type = "text" placeholder="e.g; https://www.linkedin.com/example"style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
 						
 						<div class = "w3-margin-top">
 								<a href = "#" onclick = "javascript: openEducation(); return false;" class = "w3-btn w3-blue w3-round">Next<i class = "fa fa-arrow-right w3-margin-left"></i></a>
@@ -70,17 +74,23 @@
 					<div class = "w3-container">
 					
 						<p>Section Heading</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+						<input type = "text" value="Education" style = "width: 500px; border: 0px solid black;" disabled class = "w3-container w3-light-grey w3-padding reset">
 						<p>School Name</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
-						<p>College</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+						<input type = "text" placeholder="e.g; Lakshmi Narain College Of Technology" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+						<p>School Location</p>
+						<input type = "text" placeholder= "e.g; Bhopal" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
 						<p>Degree</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+						<input type = "text" placeholder="e.g; Bachelors of Engineering" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
 						<p>Major</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+						<input type = "text" placeholder="e.g; Computer Science "style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
 						<p>GPA</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+						<input type = "text" placeholder="e.g; 8.5" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+
+						<p>Start Date</p>
+						<input type = "text" placeholder="e.g; MM/YY " style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+
+						<p>End Date</p>
+						<input type = "text" placeholder="e.g; MM/YY " style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
 						
 						<div class = "w3-margin-top">
 								<a href = "#" onclick = "javascript: openProfile(); return false;"  class = "w3-btn w3-red w3-round w3-margin-right"><i class = "fa fa-arrow-left w3-margin-right" ></i>Back</a>
@@ -92,21 +102,21 @@
 				<!-- Education End -->
 				
 				<!-- Work -->
-				<div class = "w3-container" style = "display: none; min-height: 500px; padding-bottom: 50px;" id = "work">
+				<div class = "w3-container" style = "display: none; min-height: 500px; padding-bottom: 50px;" disabled id = "work">
 					<h4 class = "w3-text-red">Work</h4>
 					
 					<div class = "w3-container">
 						<p>Section Heading:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<input type = "text" value="Work Experience" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 					
 						<p>Company Name:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<input type = "text" placeholder="e.g; Infosys Systems" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 						
 						<p>Job Title:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<input type = "text" placeholder="e.g; Software Engineer" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 					
 						<p>Job Location:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<input type = "text" placeholder="e.g; Bangalore" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 						<br/>
 
 						<div class = "w3-margin-top">
@@ -124,16 +134,15 @@
 					
 					<div class = "w3-container">
 						<p>Section Heading:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<input type = "text" value="Skills" style = "width: 500px; border: 0px solid black;" disabled class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 					
 						<p>Skill Name:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<input type = "text" placeholder="e.g; Programming Languages" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 						
-						<p>Skill Name:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<p>Skill Details:</p>
+						<input type = "text" placeholder="e.g; Python" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 					
-						<p>Skill Name:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						
 						<br/>
 
 						<div class = "w3-margin-top">
@@ -151,13 +160,19 @@
 					
 					<div class = "w3-container">
 						<p>Section Heading:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<input type = "text" value="Awards & Achievements" disabled style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 					
-						<p>Achievements Name:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<p>Achievement Name:</p>
+						<input type = "text" placeholder="e.g; Supreme Hacker" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 						
-						<p>Achievements Details:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<p>Awarder:</p>
+						<input type = "text" placeholder="e.g; Hacker Tech." style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						
+						<p>Achievement Date:</p>
+						<input type = "text" placeholder="e.g; MM/YY" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						
+						<p>Summary:</p>
+						<input type = "text" placeholder="e.g; Recognised for making best project in Hackathon" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 					<br/>
 
 					<div class = "w3-margin-top">
@@ -175,18 +190,22 @@
 					
 					<div class = "w3-container">
 						<p>Section Heading:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<input type = "text" placeholder = "Projects" disabled style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 					
-						<p>Projects Name:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<p>Project Name:</p>
+						<input type = "text" placeholder="e.g; Resume Online " style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
 						
-						<p>Projects Details:</p>
-						<input type = "text" style = "width: 300px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						<p>Project Details:</p>
+						<input type = "text" placeholder="e.g; A web application for resume desingning."style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+						
+						<p>Project Date:</p>
+						<input type = "text" placeholder="e.g; MM/YY"style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding w3-margin-bottom reset">
+
 					<br/>
 
 					<div class = "w3-margin-top">
 						<a href = "#" class = "w3-btn w3-red w3-round w3-margin-right">Add another Project<i class = "fa fa-plus w3-margin-left"></i></a>
-						<a href = "#" class = "w3-btn w3-blue w3-round">Generate Resume</a>
+						<button type = "submit"  class = "w3-btn w3-blue w3-round"><a>Generate Resume</a></button>
 					</div>
 					</div>
 				</div>
@@ -195,6 +214,6 @@
 		
 
 			
-		</div>
+		</form>
   
   </div>
