--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -19,7 +19,7 @@
         <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
         <a href="#" onclick = "javascript: openAccount(); return false;" class="w3-hover-light-grey w3-bar-item w3-button selected" id = "account-link">Account</a>
         <a href="#" onclick = "javascript: openSavedResumes(); return false;"  class="w3-hover-light-grey w3-bar-item w3-button" id = "saved-resumes-link">Saved Resumes</a>
-        <a href="#" onclick = "javascript: openPassword(); return false;"  class="w3-hover-light-grey w3-bar-item w3-button" id = "password-link">Password</a>
+        <a href="#" onclick = "javascript: openPassword(); return false;"  class="w3-hover-light-grey w3-bar-item w3-button" id = "password-link">Change Password</a>
       </div>
       <!-- Header End -->
       
